# serializer version: 1
# name: test_flip_array_to_prog
  '''
  RX(3.141592653589793) 0
  RX(3.141592653589793) 2
  RX(3.141592653589793) 4
  RX(3.141592653589793) 5
  
  '''
# ---
# name: test_flip_array_to_prog.1
  '''
  RX(3.141592653589793) 0
  RX(3.141592653589793) 1
  RX(3.141592653589793) 2
  RX(3.141592653589793) 3
  RX(3.141592653589793) 4
  RX(3.141592653589793) 5
  
  '''
# ---
